--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,11 @@ env:
     - CI="true"
 python: "3.6"
 stages:
-  - pre-test
   - test
 jobs:
   include:
     - name: "Static checks"
-      stage: pre-test
+      stage: test
       script: ./scripts/ci/ci_run_all_static_tests.sh
       env: >-
         PYTHON_VERSION=3.5
