Support custom Variable implementation

--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -226,6 +226,10 @@ min_serialized_dag_update_interval = 30
 # On each dagrun check against defined SLAs
 check_slas = True
 
+# Path to custom Variable class that will be used to store Airflow variables.
+# Example: variable_backend = path.to.CustomVariable
+variable_backend = airflow.models.variable.BaseVariable
+
 [cli]
 # In what way should the cli access the API. The LocalClient will use the
 # database directly, while the json_client will use the api running on the
